--- a/DevopsBank/pom.xml
+++ b/DevopsBank/pom.xml
@@ -13,7 +13,7 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <vaadin.version>8.0.0.alpha2</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
-			<sauceUser>ssriram</sauceUser>
+			<sauceUser>ajayreddyyeruva</sauceUser>
 		<sauceKey>198ffad5-5b21-421b-9f62-847273245db2</sauceKey>
 		   <skipTests>false</skipTests>
            <skipITs>${skipTests}</skipITs>
@@ -128,7 +128,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
-			<scope>test</scope>
 		</dependency>
 
 
